--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # DATABASE CONFIGURATION
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=postgresql-aerodynamic-03252
 spring.datasource.username=swierczynski093@gmail.com
 spring.datasource.password=Faral14!
