--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # DATABASE CONFIGURATION
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=postgresql
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=postgresql-silhouetted-08382
+spring.datasource.url=jdbc:postgresql://postgresql-silhouetted-08382
 spring.datasource.username=swierczynski093@gmail.com
 spring.datasource.password=Faral14!
 
