--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,15 @@ spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europ
 spring.datasource.username=kodilla_user
 spring.datasource.password=kodilla_password
 
+# EMAIL CONFIGURATION
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
+# TRELLO CONFIGURATION
 trello.app.username=rafaswierczynski2
 trello.api.endpoint.prod=https://api.trello.com/1
 trello.app.key=fcdb6b70e5cf025e97a39d762c9da654
