--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,9 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# ADMINISTRATION
+admin.mail = swierczynski093@gmail.com
+
 # TRELLO CONFIGURATION
 trello.app.username=rafaswierczynski2
 trello.api.endpoint.prod=https://api.trello.com/1
