--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,21 @@
 # DATABASE CONFIGURATION
 
+management.endpoints.web.exposure.include=*
+#ACTUATOR
+info.app.name=Task Application
+info.app.description=Application has been created on Kodilla course
+info.app.version=1.0.0
+info.app.owner.name=Yass
+info.app.owner.surname=Kowalski
+info.app.administrator.email=Yass.Kowalski@test.com
+info.app.administrator.address.street=Poleska
+info.app.administrator.address.number=32
+info.company.name=TaskCrudAppCreator
+info.company.goal=Our goal is to make the world a better place!
+info.company.email=tasks@crud.com
+info.company.phone=123456789
+
+
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database=postgresql
 #spring.datasource.url=${JDBC_DATABASE_URL}
