--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ apply plugin: 'io.spring.dependency-management'
 dependencies {
 	implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.projectlombok:lombok')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('mysql:mysql-connector-java')
