--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
-apply plugin: 'war'
+// apply plugin: 'war'
 
 repositories {
 	mavenCentral()
