--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,15 +31,15 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 # EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MAIL_USERNAME}
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.username=kodikodder@gmail.com
+spring.mail.password=kodilla_password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 
 # ADMINISTRATION
-admin.mail = kodikodder@gmail.com
+admin.mail = swierczynski093@gmail.com
 
 # TRELLO CONFIGURATION
 trello.app.username=rafaswierczynski2
