--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,29 +17,30 @@ info.company.phone=123456789
 
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=postgresql
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.database=postgresql
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
-#spring.jpa.database=mysql
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False
-#spring.datasource.username=kodilla_user
-#spring.datasource.password=kodilla_password
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False
+spring.datasource.username=kodilla_user
+spring.datasource.password=kodilla_password
 
 # EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=kodikodder@gmail.com
-spring.mail.password=kodilla_password
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 
 # ADMINISTRATION
-admin.mail = swierczynski093@gmail.com
+admin.name=Yass
+admin.mail=kodikodder@gmail.com
 
 # TRELLO CONFIGURATION
 trello.app.username=rafaswierczynski2
